Handling rate limiting with Resilience4j and caching

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,7 +1,32 @@
-spring.application.name: employee-api
-server.port: 8111
+spring:
+  application:
+    name: employee-api
+  cache:
+    type: caffeine
+    caffeine:
+      spec: maximumSize=1000,expireAfterWrite=2m
+    cache-names: employees
+
+server:
+  port: 8111
 
 # External API configuration
 api:
   mock:
     base-url: http://localhost:8112/api/v1/employee
+
+# Resilience4j configuration
+resilience4j:
+  retry:
+    instances:
+      employeeAPI:
+        maxAttempts: 3
+        waitDuration: 2s
+        retryExceptions:
+          - com.reliaquest.api.exception.RateLimitException
+
+  circuitbreaker:
+    instances:
+      employeeAPI:
+        failureRateThreshold: 50
+        waitDurationInOpenState: 30s
