--- a/api/build.gradle
+++ b/api/build.gradle
@@ -3,6 +3,11 @@ plugins {
 }
 
 dependencies {
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.1.0'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
+    
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
